Stop cards from stretching vertically

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -31,7 +31,7 @@
 .diceGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: min-content;
+  grid-template-rows: repeat(4, 1fr);
   overflow: auto;
   height: 86vh;
 }
